--- a/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
+++ b/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12+1j)\n"
+     ]
+    }
+   ],
    "source": [
-    "mi_var = 12 + 1j"
+    "mi_var = 12 + 1j\n",
+    "print(mi_var)"
    ]
   },
   {
@@ -2610,7 +2619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2624,7 +2633,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5d04f6d8a329d95987b154106802e5cf109483b394daa4f9d4f080f051e1734"
+   }
   }
  },
  "nbformat": 4,
