.\Preliminares en Clase - 02.ipynb

--- a/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
+++ b/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
@@ -9,10 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ayo u good pal\n"
+     ]
+    }
+   ],
+   "source": [
+    "gay=input('who you?: ')\n",
+    "if(gay=='facundo'):\n",
+    "    print('my boy', gay, ' way too gay')\n",
+    "else:\n",
+    "    print('ayo u good pal')\n"
+   ]
   },
   {
    "cell_type": "code",
