homerwork03 a medio hacer

--- a/03 - Flujos de Control/Homework03.ipynb
+++ b/03 - Flujos de Control/Homework03.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for n in range(1,10):\n",
     "    print(n)\n",
@@ -29,25 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n=1\n",
     "while (n<10):\n",
@@ -57,22 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "fin del bucle\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=int(input('start count from: '))\n",
     "while True:\n",
@@ -86,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y\n",
-      "t\n",
-      "h\n",
-      "o\n",
-      "n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cadena='Python'\n",
     "for letra in cadena:\n",
@@ -115,7 +58,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Crear una variable que contenga un elemento del conjunto de números enteros y luego imprimir por pantalla si es mayor o menor a cero\n"
+    "# 1) Crear una variable que contenga un elemento del conjunto de números enteros y luego imprimir por pantalla si es mayor o menor a cero\n",
+    "var1=int(input('Dame un número mayor a 0 gay:'))\n",
+    "if (var1>=0):\n",
+    "    print('Mayor a', 0)\n",
+    "else:\n",
+    "    print('menor a 0')\n"
    ]
   },
   {
@@ -124,7 +72,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2) Crear dos variables y un condicional que informe si son del mismo tipo de dato\n"
+    "# 2) Crear dos variables y un condicional que informe si son del mismo tipo de dato\n",
+    "var2=input('dame algo:')\n",
+    "var3=input('dame otra cosa:')\n",
+    "if(type(var2)==type(var3)):\n",
+    "    print('they are equal')\n",
+    "else:\n",
+    "    print('not the same bro')\n",
+    "    "
    ]
   },
   {
@@ -133,7 +88,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3) Para los valores enteros del 1 al 20, imprimir por pantalla si es par o impar\n"
+    "# 3) Para los valores enteros del 1 al 20, imprimir por pantalla si es par o impar\n",
+    "for num in range(1,21):\n",
+    "    if (num%2==0):\n",
+    "        print('pair bro')\n",
+    "    else:\n",
+    "        print('not pair bro')"
    ]
   },
   {
@@ -142,7 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4) En un ciclo for mostrar para los valores entre 0 y 5 el resultado de elevarlo a la potencia igual a 3\n"
+    "# 4) En un ciclo for mostrar para los valores entre 0 y 5 el resultado de elevarlo a la potencia igual a 3\n",
+    "for number in range(0,6):\n",
+    "    print(number**3)   \n"
    ]
   },
   {
@@ -151,43 +113,145 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5) Crear una variable que contenga un número entero y realizar un ciclo for la misma cantidad de ciclos\n"
+    "# 5) Crear una variable que contenga un número entero y realizar un ciclo for la misma cantidad de ciclos\n",
+    "var4=int(input('ingresá un numero ENTERO pedazo de careta:'))\n",
+    "for x in range(1,var4+1):\n",
+    "    print(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "27\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6) Utilizar un ciclo while para realizar el factorial de un número guardado en una variable, sólo si la variable contiene un número entero mayor a 0\n"
+    "# 6) Utilizar un ciclo while para realizar el factorial de un número guardado en una variable, sólo si la variable contiene un número entero mayor a 0\n",
+    "var5=int(input('dame un entero:'))\n",
+    "x=0\n",
+    "var6=var5\n",
+    "if (var5>0):\n",
+    "    while (x<var5):\n",
+    "        var6=var6*var5\n",
+    "        x=x+1\n",
+    "        print(var6)\n",
+    "else:\n",
+    "    print('fin')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7) Crear un ciclo for dentro de un ciclo while\n"
+    "# 7) Crear un ciclo for dentro de un ciclo while\n",
+    "f=int(input('gimme an int: '))\n",
+    "g=0\n",
+    "while(g<=f):\n",
+    "    for simbol in range(0,4):\n",
+    "        print(simbol)\n",
+    "    g=g+1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "still have 2 left\n",
+      "still have 1 left\n",
+      "still have 0 left\n",
+      "still have 1 left\n",
+      "still have 0 left\n",
+      "still have 1 left\n",
+      "still have 0 left\n",
+      "still have 0 left\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8) Crear un ciclo while dentro de un ciclo for\n"
+    "# 8) Crear un ciclo while dentro de un ciclo for\n",
+    "for var7 in range(0,4):\n",
+    "    e=int(input('int?:'))\n",
+    "    d=0\n",
+    "    while(d<e):\n",
+    "        d=d+1\n",
+    "        c=e-d\n",
+    "        print('still have',c,'left')\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9) Imprimir los números primos existentes entre 0 y 30\n"
+    "# 9) Imprimir los números primos existentes entre 0 y 30\n",
+    "for numerodeprueba in range(0,31): #hacer del 1 al 30\n",
+    "    divisor=1 #arrancamos con el divisor siendo 1\n",
+    "    contador=0 #contamos cuantos divisores tiene el número, arrancando en 0\n",
+    "    while (divisor<=numerodeprueba): #desde 1 hasta el número que esté pasando\n",
+    "        if (numerodeprueba%2!=0) and (numerodeprueba%divisor==0): #sin contar los impares, y que al dividir por el divisor sea exacto\n",
+    "            contador=contador+1 #si llegó acá sumo al contadore de dividores 1 más\n",
+    "        divisor=divisor+1 #either way paso al siguiente divisor\n",
+    "    if (contador==2):\n",
+    "        print(numerodeprueba)\n",
+    "#honestamente no entiendo cómo carajo hice que funcione\n"
    ]
   },
   {
