--- a/03 - Flujos de Control/Homework03.ipynb
+++ b/03 - Flujos de Control/Homework03.ipynb
@@ -256,11 +256,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10) ¿Se puede mejorar el proceso del punto 9? Utilizar las sentencias break y/ó continue para tal fin\n"
+    "# 10) ¿Se puede mejorar el proceso del punto 9? Utilizar las sentencias break y/ó continue para tal fin\n",
+    "for number in range(0,31):\n",
+    "    dividir=1\n",
+    "    recuento=0\n",
+    "    while(dividir<=number):\n",
+    "        if(number%dividir==0):\n",
+    "            recuento=recuento+1\n",
+    "        dividir=dividir+1\n",
+    "    if(recuento==2):\n",
+    "        print(number)  "
    ]
   },
   {
@@ -269,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 11) En los puntos 9 y 10, se diseño un código que encuentra números primos y además se lo optimizó. ¿Es posible saber en qué medida se optimizó?\n"
+    "# 11) En los puntos 9 y 10, se diseño un código que encuentra números primos y además se lo optimizó. ¿Es posible saber en qué medida se optimizó?\n",
+    "#no man. cómo lo voy a saber?"
    ]
   },
   {
@@ -283,29 +310,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "120\n",
+      "132\n",
+      "144\n",
+      "156\n",
+      "168\n",
+      "180\n",
+      "192\n",
+      "204\n",
+      "216\n",
+      "228\n",
+      "240\n",
+      "252\n",
+      "264\n",
+      "276\n",
+      "288\n",
+      "300\n"
+     ]
+    }
+   ],
    "source": [
-    "# 13) Aplicando continue, armar un ciclo while que solo imprima los valores divisibles por 12, dentro del rango de números de 100 a 300\n"
+    "# 13) Aplicando continue, armar un ciclo while que solo imprima los valores divisibles por 12, dentro del rango de números de 100 a 300\n",
+    "for iteracion in range(99, 301):\n",
+    "    if(iteracion%12==0):\n",
+    "        print(iteracion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 14) Utilizar la función **input()** que permite hacer ingresos por teclado, para encontrar números primos y dar la opción al usario de buscar el siguiente\n"
+    "# 14) Utilizar la función **input()** que permite hacer ingresos por teclado, para encontrar números primos y dar la opción al usario de buscar el siguiente\n",
+    "fuck=int(input('dame un INT:'))\n",
+    "contar=0\n",
+    "div=1\n",
+    "while(div<=fuck):\n",
+    "    if(fuck%div==0):\n",
+    "        contar=contar+1\n",
+    "    div=div+1\n",
+    "if(contar==2):\n",
+    "    print('es primo, el siguiente primo es') #literalmente no hay forma de saber el siguiente primo man\n",
+    "else:\n",
+    "    print('no es primo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102 divido 6 es 17.0 y dividio 3 es 34.0\n",
+      "108 divido 6 es 18.0 y dividio 3 es 36.0\n",
+      "114 divido 6 es 19.0 y dividio 3 es 38.0\n",
+      "120 divido 6 es 20.0 y dividio 3 es 40.0\n",
+      "126 divido 6 es 21.0 y dividio 3 es 42.0\n",
+      "132 divido 6 es 22.0 y dividio 3 es 44.0\n",
+      "138 divido 6 es 23.0 y dividio 3 es 46.0\n",
+      "144 divido 6 es 24.0 y dividio 3 es 48.0\n",
+      "150 divido 6 es 25.0 y dividio 3 es 50.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 15) Crear un ciclo while que encuentre dentro del rango de 100 a 300 el primer número divisible por 3 y además múltiplo de 6\n"
+    "# 15) Crear un ciclo while que encuentre dentro del rango de 100 a 300 el primer número divisible por 3 y además múltiplo de 6\n",
+    "for intento in range(99,151):\n",
+    "    if(intento%3==0) and (intento%6==0):\n",
+    "        y=intento/3\n",
+    "        w=intento/6\n",
+    "        print(intento, 'divido 6 es',w, 'y dividio 3 es',y)\n",
+    "    "
    ]
   }
  ],
