--- a/03 - Flujos de Control/Homework03.ipynb
+++ b/03 - Flujos de Control/Homework03.ipynb
@@ -394,6 +394,23 @@
     "        print(intento, 'divido 6 es',w, 'y dividio 3 es',y)\n",
     "    "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#esto es una prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"prueba 2\")"
+   ]
   }
  ],
  "metadata": {
